--- a/docker/supervisor-app.conf
+++ b/docker/supervisor-app.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [program:ccl-gunicorn]
-command = gunicorn --timeout 90 --workers 24 --bind unix:/rapidpro/rapidpro.sock temba.wsgi:application
+command = gunicorn --timeout 90 --workers=%(ENV_NUM_GUNICORN_WORKERS)s --threads=%(ENV_NUM_GUNICORN_THREADS)s --bind unix:/rapidpro/rapidpro.sock temba.wsgi:application
 
 [program:ccl-nginx]
 command = service nginx start
