--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -45,7 +45,7 @@ server {
     }
 
     location / {
-        limit_req zone=one burst=64000 delay=8192;
+        limit_req zone=one burst=64000;
 
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
