--- a/.ebextensions/change-nginx-max-body-size.config
+++ b/.ebextensions/change-nginx-max-body-size.config
@@ -26,6 +26,7 @@ files:
       /bin/sed -i "/use\sepoll;/d" /etc/nginx/nginx.conf
       /bin/sed -i "/multi_accept\son;/d" /etc/nginx/nginx.conf
       /bin/sed -i "/worker_rlimit_nofile\s65536;/d" /etc/nginx/nginx.conf
+      /bin/sed -i "/worker_processes\s/c\worker_processes 16;" /etc/nginx/nginx.conf
       /bin/sed -i "/worker_connections\s/c\    worker_connections 2048;\n    use epoll;\n    multi_accept on;" /etc/nginx/nginx.conf
       /bin/echo "worker_rlimit_nofile 65536;" >> /etc/nginx/nginx.conf
       /sbin/service nginx reload
