Add FCM parameter

--- a/docker/docker.settings
+++ b/docker/docker.settings
@@ -228,3 +228,5 @@ DATABASES[DB_MIGRATION] = _ccl_v1_direct_database_config
 MIGRATION_FROM_URL = os.environ.get("MIGRATION_SERVER_URL", "https://live.communityconnectlabs.com")
 
 GOOGLE_FONT_API_KEY = os.environ.get("GOOGLE_FONT_API_KEY", "")
+
+FCM_API_KEY = os.environ.get("FCM_API_KEY", "")
