--- a/docker/supervisor-app.conf
+++ b/docker/supervisor-app.conf
@@ -8,11 +8,18 @@ command = service nginx start
 
 [program:ccl-celery]
 environment = C_FORCE_ROOT="true"
-command = celery worker -A temba -B -Q celery,msgs,flows,handler --autoscale=%(ENV_CELERY_AUTOSCALE)s -O fair -n rapidpro.celery -l ERROR
+command = celery worker -A temba -B -Q celery --autoscale=%(ENV_CELERY_AUTOSCALE)s -O fair -n rapidpro.celery -l ERROR
 autostart = true
 autorestart = true
 stdout_logfile = /dev/stdout
 stderr_logfile = /dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
+stopwaitsecs = 120
+
+[program:ccl-celery-flows]
+environment = C_FORCE_ROOT="true"
+command = celery worker -A temba -Q msgs,flows,handler --autoscale=12,2 -O fair -n rapidpro.celery_flows -l ERROR
+autostart = true
+autorestart = true
 stopwaitsecs = 120
