Adding env variable to the celery flows queue

--- a/docker/supervisor-app.conf
+++ b/docker/supervisor-app.conf
@@ -19,7 +19,7 @@ stopwaitsecs = 120
 
 [program:ccl-celery-flows]
 environment = C_FORCE_ROOT="true"
-command = celery worker -A temba -Q msgs,flows,handler --autoscale=12,2 -O fair -n rapidpro.celery_flows -l ERROR
+command = celery worker -A temba -Q msgs,flows,handler --autoscale=%(ENV_CELERY_FLOWS_AUTOSCALE)s -O fair -n rapidpro.celery_flows -l ERROR
 autostart = true
 autorestart = true
 stopwaitsecs = 120
