--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,7 +7,7 @@ upstream mailroom_server {
 }
 
 upstream rapidpro_server {
-  server unix:/rapidpro/rapidpro.sock;
+  server 0.0.0.0:8080;
 }
 
 limit_req_zone $binary_remote_addr zone=one:10m rate=8192r/s;
