--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,14 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Install PostgreSQL
-      uses: nyaruka/postgis-action@v2
+      uses: nyaruka/postgis-action@master
       with:
         postgresql version: ${{ matrix.pg_version }}
         postgis version: ${{ env.postgis_version }}
         postgresql db: temba
         postgresql user: temba
         postgresql password: temba
+        postgresql arguments: '--jit=off'
 
     - name: Install Linux packages
       run: |
