--- a/.coveragerc
+++ b/.coveragerc
@@ -35,6 +35,7 @@ omit =
     temba/utils/management/commands/migrate_flows.py
     temba/utils/management/commands/test_db.py
     temba/utils/management/commands/perf_test.py
+    temba/utils/management/commands/verify_sentry.py
 
 [html]
 directory = coverage_html_report
