Fix contact group limit

--- a/docker/docker.settings
+++ b/docker/docker.settings
@@ -193,7 +193,7 @@ RECAPTCHA_SECRET_KEY = os.environ.get("RECAPTCHA_SECRET_KEY", "")
 AUTHY_API_KEY = os.environ.get("AUTHY_API_KEY", "")
 AUTHY_MAGIC_PASS = os.environ.get("AUTHY_MAGIC_PASS", "")
 
-MAX_ORG_CONTACTGROUPS = int(os.environ.get("MAX_ORG_CONTACTGROUPS", 250))
+MAX_ACTIVE_CONTACTGROUPS_PER_ORG = int(os.environ.get("MAX_ORG_CONTACTGROUPS", 250))
 
 GOOGLE_FONT_API_KEY = os.environ.get("GOOGLE_FONT_API_KEY", "")
 
