--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,10 +33,8 @@ RUN useradd -Ums /bin/bash $PROJECT_USER \
 RUN mkdir $PROJECT_PATH \
  && mkdir $PROJECT_CONF \
  && mkdir $NPM_CONFIG_PREFIX \
-# && mkdir -p /var/www \
  && chown -R $PROJECT_USER:$PROJECT_GROUP $PROJECT_PATH \
  && chown -R $PROJECT_USER:$PROJECT_GROUP $NPM_CONFIG_PREFIX
-# && chown -R $PROJECT_USER:$PROJECT_GROUP /var/www
 
 RUN rm /etc/nginx/sites-enabled/default
 
@@ -48,21 +46,10 @@ RUN pip install --no-cache-dir -r /tmp/dep/pip-freeze.txt && \
 RUN cp /tmp/nginx.site.conf /etc/nginx/sites-available/$PROJECT.conf \
  && ln -s /etc/nginx/sites-available/$PROJECT.conf /etc/nginx/sites-enabled/$PROJECT.conf
 
-#RUN envsubst < /tmp/nginx.conf > $PROJECT_CONF/nginx.conf \
-# && envsubst < /tmp/nginx.site.conf > $PROJECT_CONF/$PROJECT.conf \
-# && chown -R $PROJECT_USER:$PROJECT_GROUP $PROJECT_CONF
-
 COPY . $PROJECT_PATH
 RUN chown -R $PROJECT_USER:$PROJECT_GROUP $PROJECT_PATH
 
-#COPY --chown=$PROJECT_USER:$PROJECT_GROUP ./docker/nginx.start.sh /etc/init.d/$PROJECT
-#RUN chmod +x /etc/init.d/$PROJECT \
-# && cat /etc/init.d/$PROJECT \
-# && update-rc.d /etc/init.d/$PROJECT enable
-#RUN update-rc.d /etc/init.d/nginx enable
-
 WORKDIR $PROJECT_PATH
-#USER $PROJECT_USER
 
 RUN su $PROJECT_USER -c "npm install --global \
   coffeescript \
@@ -75,4 +62,5 @@ RUN su $PROJECT_USER -c "npm install \
 RUN su $PROJECT_USER -c "ln -s $PROJECT_PATH/temba/settings.py.prod $PROJECT_PATH/temba/settings.py"
 
 EXPOSE 8000
+EXPOSE 8001
 ENTRYPOINT ["sh", "./docker/start"]
