--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.6-slim as build-apps
 
-
 ARG RAPIDPRO_APPS_GIT_URL
 ARG RAPIDPRO_APPS_GIT_BRANCH
 ARG PROTOBUFFERS_URL
@@ -11,7 +10,7 @@ RUN apt-get update \
 
 # get protobuffers
 WORKDIR /protos
-RUN git clone --depth 1 -- ${PROTOBUFFERS_URL} . \
+RUN git clone ${PROTOBUFFERS_URL} . \
  && cd rapidpro-org 
 
 WORKDIR /src
@@ -23,12 +22,13 @@ RUN git clone -- ${RAPIDPRO_APPS_GIT_URL} . \
 RUN cp /protos/rapidpro-org/org.proto weni/org_grpc/grpc_gen/ 
 RUN pip install grpcio grpcio-tools
 RUN python -m grpc_tools.protoc \
-    --grpc_python_out=./weni/org_grpc/grpc_gen/org.proto \
-    --proto_path=./ \
-    --python_out=./ \
-    --experimental_allow_proto3_optional
+ --proto_path=./ \
+ --python_out=./ \
+ --grpc_python_out=./ \
+ ./weni/org_grpc/grpc_gen/org.proto \
+ --experimental_allow_proto3_optional
 
-RUN python setup.py sdist .
+RUN python setup.py sdist
 
 
 FROM python:3.6-slim
@@ -68,9 +68,9 @@ RUN mkdir $PROJECT_PATH \
 
 RUN rm /etc/nginx/sites-enabled/default
 
-COPY --from=0 /src/dist .
 COPY ./docker/pip-freeze.txt /tmp/dep/
 COPY ./pip-freeze.txt ./docker/nginx.site.conf /tmp/
+COPY --from=build-apps /src/dist .
 RUN pip install --no-cache-dir -r /tmp/dep/pip-freeze.txt && \
     pip install rapidpro-apps-0.1.tar.gz
 
