--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,13 +58,12 @@ jobs:
     - name: Initialize environment
       run: |
         echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
-        pip install --upgrade pip
-        pip install -r pip-freeze.txt
-        pip install codecov flake8
+        python -m pip install -U pip poetry
+        poetry install
         npm install
         sudo npm install -g less
         ln -s ${{ github.workspace }}/temba/settings.py.dev ${{ github.workspace }}/temba/settings.py
-        ./manage.py migrate
+        poetry run ./manage.py migrate
         # fetch and extract rp-indexer
         wget https://github.com/nyaruka/rp-indexer/releases/download/v${{ env.rpindexer_version }}/rp-indexer_${{ env.rpindexer_version }}_linux_amd64.tar.gz
         tar -xvf rp-indexer_${{ env.rpindexer_version }}_linux_amd64.tar.gz rp-indexer
@@ -76,16 +75,16 @@ jobs:
     - name: Run pre-test checks
       run: |
         # test that everything is well formatted, no missing migrations etc
-        ./code_check.py --debug $([[ "$BRANCH_NAME" == "translations_django-po" ]] && echo "--skip-compilemessages")
+        poetry run ./code_check.py --debug $([[ "$BRANCH_NAME" == "translations_django-po" ]] && echo "--skip-compilemessages")
         # check we can collect and compress all static files
-        ./manage.py collectstatic --noinput --verbosity=0
-        ./manage.py compress --extension=".haml" --settings=temba.settings_compress
+        poetry run ./manage.py collectstatic --noinput --verbosity=0
+        poetry run ./manage.py compress --extension=".haml" --settings=temba.settings_compress
 
     - name: Run tests
       run: |
-        coverage run manage.py test --keepdb --noinput --verbosity=2
-        coverage report -i
-        coverage report -i --rcfile .coveragerc_todo
+        poetry run coverage run manage.py test --keepdb --noinput --verbosity=2
+        poetry run coverage report -i
+        poetry run coverage report -i --rcfile .coveragerc_todo
 
     - name: Mailroom log
       if: failure()
