Pin pyotp for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ librato_bg = "^1.0.6"
 cryptography = "^2.9.2"
 nexmo = "^2.5.2"
 pyfcm = "^1.5.1"
-pyotp = "^2.6.0"
+pyotp = "2.4.1"
 python-gcm = "^0.4"
 python-telegram-bot = "^11.1.0"
 sentry-sdk = "^1.0.0"
