--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ Django = "<3.0"
 django-compressor = "^2.4"
 django-countries = "^7.0"
 django-hamlpy = "^1.4.3"
-django-mptt = "^0.12.0"
+django-mptt = "0.8.7"
 django-redis = "4.10.0"
 django-storages = "^1.11.1"
 django-timezone-field = "^4.1.1"
@@ -35,7 +35,7 @@ python-telegram-bot = "^11.1.0"
 sentry-sdk = "^1.0.0"
 stripe = "^2.56.0"
 twilio = "^6.53.0"
-twython = "3.5.0"
+twython = "^3.5.0"
 geojson = "^2.5.0"
 Markdown = "^2.6.11"
 polib = "^1.1.0"
@@ -62,9 +62,11 @@ requests-toolbelt = "^0.9.1"
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 coverage = "^5.5"
-flake8 = "^3.8.4"
-isort = "^5.7.0"
+flake8 = "3.7.7"
+isort = "^4.3.16"
 codecov = "^2.1.11"
+responses = "^0.12.1"
+beautifulsoup4 = "^4.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
