--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,14 @@ analytics-python = "^1.2.9"
 boto3 = "^1.17.21"
 librato_bg = "^1.0.6"
 cryptography = "^2.9.2"
-nexmo = "^2.5.2"
+nexmo = "2.4.0"
 pyfcm = "^1.5.1"
 pyotp = "2.4.1"
 python-telegram-bot = "^11.1.0"
 sentry-sdk = "^1.0.0"
 stripe = "^2.56.0"
-twilio = "^6.53.0"
-twython = "^3.5.0"
+twilio = "6.24.0"
+twython = "3.5.0"
 geojson = "^2.5.0"
 Markdown = "^2.6.11"
 polib = "^1.1.0"
@@ -49,13 +49,14 @@ iptools = "^0.7.0"
 iso-639 = "^0.4.5"
 iso8601 = "^0.1.14"
 phonenumbers = "*"
-pycountry = "^20.7.3"
+pycountry = "18.12.8"
 python-dateutil = "2.2"
 psycopg2-binary = "^2.8.6"
 simplejson = "^3.17.2"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
+redis = "2.10.5"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
