--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,14 +15,16 @@ django-compressor = "^2.4"
 django-countries = "^7.0"
 django-hamlpy = "^1.4.3"
 django-mptt = "0.8.7"
-django-redis = "4.10.0"
+django-redis = "^4.12.1"
 django-storages = "^1.11.1"
 django-timezone-field = "^4.1.1"
 djangorestframework = "3.9.2"
 dj-database-url = "^0.5.0"
+smartmin = "^2.3.8"
+celery = "4.4.6"
+redis = "^3.5.3"
 elasticsearch = "^7.11.0"
 elasticsearch-dsl = "^7.3.0"
-smartmin = "^2.3.5"
 analytics-python = "^1.2.9"
 boto3 = "^1.17.21"
 librato_bg = "^1.0.6"
@@ -56,7 +58,6 @@ simplejson = "^3.17.2"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
-redis = "2.10.5"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
