--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "http://github.com/rapidpro/rapidpro"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-Django = "<3.0"
+Django = "^2.2.19"
 django-compressor = "^2.4"
 django-countries = "^7.0"
 django-hamlpy = "^1.4.3"
@@ -18,7 +18,7 @@ django-mptt = "0.8.7"
 django-redis = "^4.12.1"
 django-storages = "^1.11.1"
 django-timezone-field = "^4.1.1"
-djangorestframework = "3.9.2"
+djangorestframework = "^3.12.2"
 dj-database-url = "^0.5.0"
 smartmin = "^2.3.8"
 celery = "4.4.6"
