--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ analytics-python = "^1.2.9"
 boto3 = "^1.17.21"
 librato_bg = "^1.0.6"
 cryptography = "^2.9.2"
-nexmo = "2.4.0"
+vonage = "2.5.2"
 pyfcm = "^1.5.1"
 pyotp = "2.4.1"
 python-telegram-bot = "^11.1.0"
