--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     ]
   },
   "dependencies": {
-    "@nyaruka/flow-editor": "1.13.7",
-    "@nyaruka/temba-components": "0.11.4",
+    "@nyaruka/flow-editor": "1.13.9",
+    "@nyaruka/temba-components": "0.11.6",
     "@tailwindcss/ui": "0.2.2",
     "fa-icons": "0.2.0",
     "less": "2.7.1",
+    "postcss": "7.0.27",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -32,7 +33,7 @@
     "postcss-simple-vars": "^5.0.2",
     "tailwindcss": "1.3.5",
     "tailwindcss-dir": "^4.0.0",
-    "watch": "^1.0.2"
+    "watch": "0.13.0"
   },
   "resolutions": {
     "minimist": "1.2.5"
