--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "AGPL-3"
 repository = "http://github.com/rapidpro/rapidpro"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7.1"
 Django = "^2.2.19"
 django-compressor = "^2.4"
 django-countries = "^7.0"
@@ -20,7 +20,6 @@ django-storages = "^1.11.1"
 django-timezone-field = "^4.1.1"
 djangorestframework = "^3.12.2"
 dj-database-url = "^0.5.0"
-smartmin = "^2.3.8"
 celery = "4.4.6"
 redis = "^3.5.3"
 elasticsearch = "^7.11.0"
@@ -58,6 +57,20 @@ simplejson = "^3.17.2"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
+django-cors-headers = "^3.7.0"
+parse-rest = {git = "https://github.com/greatnonprofits-nfp/ParsePy.git"}
+jellyfish = "^0.8.2"
+pdfkit = "^0.6.1"
+Pillow = "^8.2.0"
+pycrypto = "^2.6.1"
+python-gcm = "^0.4"
+smartmin = {git = "https://github.com/greatnonprofits-nfp/smartmin.git", rev = "ccl-v3.0"}
+sorl-thumbnail = "^12.7.0"
+supervisor = "^4.2.2"
+ua-parser = "^0.10.0"
+user-agents = "^2.2.0"
+numpy = "1.17.2"
+pandas = "0.22"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
