Improving nginx config

--- a/.ebextensions/change-nginx-max-body-size.config
+++ b/.ebextensions/change-nginx-max-body-size.config
@@ -25,8 +25,8 @@ files:
       /bin/echo "client_max_body_size 500M;" > /etc/nginx/conf.d/proxy.conf
       /bin/sed -i "/use\sepoll;/d" /etc/nginx/nginx.conf
       /bin/sed -i "/multi_accept\son;/d" /etc/nginx/nginx.conf
-      /bin/sed -i "/worker_rlimit_nofile\s65536;/d" /etc/nginx/nginx.conf
-      /bin/sed -i "/worker_processes\s/c\worker_processes 16;" /etc/nginx/nginx.conf
-      /bin/sed -i "/worker_connections\s/c\    worker_connections 2048;\n    use epoll;\n    multi_accept on;" /etc/nginx/nginx.conf
-      /bin/echo "worker_rlimit_nofile 65536;" >> /etc/nginx/nginx.conf
+      /bin/sed -i "/worker_rlimit_nofile\s300000;/d" /etc/nginx/nginx.conf
+      /bin/sed -i "/worker_processes\s/c\worker_processes auto;" /etc/nginx/nginx.conf
+      /bin/sed -i "/worker_connections\s/c\    worker_connections 106384;\n    use epoll;\n    multi_accept on;" /etc/nginx/nginx.conf
+      /bin/echo "worker_rlimit_nofile 300000;" >> /etc/nginx/nginx.conf
       /sbin/service nginx reload
