--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@nyaruka/flow-editor": "1.13.15",
     "@nyaruka/temba-components": "0.11.9",
     "@tailwindcss/ui": "0.2.2",
+    "colorette": "1.2.2",
     "fa-icons": "0.2.0",
+    "is-core-module": "2.4.0",
     "less": "2.7.1",
     "postcss": "7.0.27",
+    "queue-microtask": "1.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
