--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@nyaruka/flow-editor": "1.13.15",
     "@nyaruka/temba-components": "0.11.9",
-    "@tailwindcss/ui": "0.2.2",
     "colorette": "1.2.2",
     "fa-icons": "0.2.0",
     "is-core-module": "2.4.0",
     "less": "2.7.1",
-    "postcss": "7.0.27",
     "queue-microtask": "1.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
@@ -27,15 +25,15 @@
     "tw-watch": "watch 'npm run tw-build' ./static/scss"
   },
   "devDependencies": {
+    "autoprefixer": "10.2.5",
     "bower": "1.8.8",
-    "cssnano": "^4.1.10",
     "jasmine-core": "2.5.0",
-    "postcss-cli": "7.1.1",
-    "postcss-nested": "^4.2.1",
-    "postcss-scss": "^2.0.0",
-    "postcss-simple-vars": "^5.0.2",
-    "tailwindcss": "1.3.5",
-    "tailwindcss-dir": "^4.0.0",
+    "postcss": "8.3.0",
+    "postcss-import": "14.0.2",
+    "postcss-loader": "5.3.0",
+    "postcss-scss": "3.0.5",
+    "postcss-simple-vars": "6.0.3",
+    "tailwindcss": "2.1.2",
     "watch": "0.13.0"
   },
   "resolutions": {
