--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,10 @@ server {
     listen 8000;
     client_max_body_size 500M;
 
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+
     location /media {
         alias /rapidpro/media;
     }
