--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,9 +18,12 @@ server {
     listen 8000;
     client_max_body_size 500M;
 
-    proxy_read_timeout 300;
-    proxy_connect_timeout 300;
-    proxy_send_timeout 300;
+    client_header_timeout   300;
+    client_body_timeout     300;
+    send_timeout            300;
+    proxy_read_timeout      300;
+    proxy_connect_timeout   300;
+    proxy_send_timeout      300;
 
     location /media {
         alias /rapidpro/media;
