Disable server side cursor for read-only

--- a/docker/docker.settings
+++ b/docker/docker.settings
@@ -81,6 +81,7 @@ _readonly_database_config["OPTIONS"] = os.environ.get("RO_DB_OPTIONS", _readonly
 
 _direct_database_config = _default_database_config.copy()
 _default_database_config["DISABLE_SERVER_SIDE_CURSORS"] = True
+_readonly_database_config["DISABLE_SERVER_SIDE_CURSORS"] = True
 
 DATABASES = {
     "default": _default_database_config,
