--- a/.coveragerc
+++ b/.coveragerc
@@ -26,7 +26,7 @@ omit =
     *settings*
     temba/api/management/commands/webhook_stats.py
     temba/channels/management/commands/reactivate_fb_channels.py
-    temba/contacts/management/commands/audit_es_group.py
+    temba/contacts/management/commands/*
     temba/flows/management/commands/run_audit.py
     temba/msgs/management/commands/msg_console.py
     temba/orgs/management/commands/*
