change dockerfile to clone and install floweditor

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,7 @@ ARG BRANDING_ENABLED
  
 ARG RAPIDPRO_APPS_GIT_URL
 ARG RAPIDPRO_APPS_GIT_BRANCH
+ARG FLOWEDITOR_VERSION
 
 
 ENV PYTHONUNBUFFERED 1
@@ -27,6 +28,7 @@ ENV PROJECT_GROUP     $PROJECT_USER
 ENV PROJECT_CONF      ${PROJECT_PATH}-conf
 ENV NPM_CONFIG_PREFIX /opt/npm-globals
 ENV PATH              "${NPM_CONFIG_PREFIX}/bin:${PATH}"
+ENV FLOWEDITOR_TGZ "nyaruka-flow-editor-${FLOWEDITOR_VERSION}.tgz"
 
 RUN apt-get update \
  && apt-get install --no-install-recommends --no-install-suggests -y apt-utils \
@@ -69,8 +71,13 @@ RUN su $PROJECT_USER -c "npm install --global \
   less \
   yarn"
 
-RUN su $PROJECT_USER -c "npm install \
- && npm prune --production"
+RUN su $PROJECT_USER -c "npm install"
+
+RUN su $PROJECT_USER -c "git clone --branch feature/more-options-in-wait-for-response https://github.com/Ilhasoft/floweditor.git"
+
+RUN su $PROJECT_USER -c "cd floweditor && yarn install && yarn run build && npm pack && cd .. && npm install ./floweditor/${FLOWEDITOR_TGZ}"
+
+RUN su $PROJECT_USER -c "npm prune --production"
 
 RUN su $PROJECT_USER -c "ln -s $PROJECT_PATH/temba/settings.py.prod $PROJECT_PATH/temba/settings.py"
 
