--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,17 @@ repository = "http://github.com/rapidpro/rapidpro"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-Django = "^2.2.19"
+Django = "^3.2.6"
 django-compressor = "^2.4"
 django-countries = "^7.0"
 django-hamlpy = "^1.4.3"
-django-mptt = "0.8.7"
+django-mptt = "^0.12.0"
 django-redis = "^4.12.1"
 django-storages = "^1.11.1"
 django-timezone-field = "^4.1.1"
 djangorestframework = "^3.12.2"
 dj-database-url = "^0.5.0"
-smartmin = "^2.3.9"
+smartmin = "^3.0.0"
 celery = "4.4.6"
 redis = "^3.5.3"
 elasticsearch = "^7.11.0"
@@ -57,6 +57,7 @@ psycopg2-binary = "^2.8.6"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
+chardet = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
