--- a/.github/workflows/build-push-develop.yaml
+++ b/.github/workflows/build-push-develop.yaml
@@ -30,7 +30,7 @@ jobs:
         id: docker_build1
         uses: docker/build-push-action@v2
         with:
-          context: docker
+          context: .
           file: docker/Dockerfile
           push: true
           tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
@@ -43,7 +43,7 @@ jobs:
         id: docker_build2
         uses: docker/build-push-action@v2
         with:
-          context: docker
+          context: .
           file: docker/Dockerfile.varnish
           push: true
           tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push:${{ steps.vars.outputs.tag }}-varnish
