Fix dockerfile to include ca-certificates package

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,9 +35,8 @@ ENV FLOWEDITOR_TGZ "nyaruka-flow-editor-${FLOWEDITOR_VERSION}.tgz"
 RUN apt-get update && apt-get install -y apt-transport-https
 
 RUN apt-get update \
- && apt-get install --no-install-recommends --no-install-suggests -y apt-utils \
- && apt-get install --no-install-recommends --no-install-suggests -y gcc bzip2 git curl nginx libpq-dev gettext \
-    libgdal-dev python3-cffi python3-gdal vim  ca-certificates
+ && apt-get install --no-install-recommends --no-install-suggests -y apt-utils gcc \
+ bzip2 git curl nginx libpq-dev gettext libgdal-dev python3-cffi python3-gdal vim ca-certificates
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - \
  && apt-get install --no-install-recommends --no-install-suggests -y nodejs
