Fix variables in YAML format

--- a/.github/workflows/build-push-develop.yaml
+++ b/.github/workflows/build-push-develop.yaml
@@ -26,25 +26,25 @@ jobs:
           registry: 242357350604.dkr.ecr.sa-east-1.amazonaws.com
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-      - name: Build and push - Rapidpro Image
-        id: docker_build1
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: docker/Dockerfile
-          push: true
-          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
-          no-cache: true
-          build-args: |
-            RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
-            RAPIDPRO_APPS_GIT_BRANCH=main
-            PROTOBUFFERS_URL=https://github.com/Ilhasoft/weni-protobuffers.git
-      - name: Build and push - Rapidpro Image
+      # - name: Build and push - Rapidpro Image
+      #   id: docker_build1
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     file: docker/Dockerfile
+      #     push: true
+      #     tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
+      #     no-cache: true
+      #     build-args: |
+      #       RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
+      #       RAPIDPRO_APPS_GIT_BRANCH=main
+      #       PROTOBUFFERS_URL=https://github.com/Ilhasoft/weni-protobuffers.git
+      - name: Build and push - Varnish Image
         id: docker_build2
         uses: docker/build-push-action@v2
         with:
           context: docker
-          file: Dockerfile.varnish
+          file: docker/Dockerfile.varnish
           push: true
           tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push:${{ steps.vars.outputs.tag }}-varnish
           no-cache: true
