--- a/.github/workflows/build-push-develop.yaml
+++ b/.github/workflows/build-push-develop.yaml
@@ -26,19 +26,19 @@ jobs:
           registry: 242357350604.dkr.ecr.sa-east-1.amazonaws.com
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-      # - name: Build and push - Rapidpro Image
-      #   id: docker_build1
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     file: docker/Dockerfile
-      #     push: true
-      #     tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
-      #     no-cache: true
-      #     build-args: |
-      #       RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
-      #       RAPIDPRO_APPS_GIT_BRANCH=main
-      #       PROTOBUFFERS_URL=https://github.com/Ilhasoft/weni-protobuffers.git
+      - name: Build and push - Rapidpro Image
+        id: docker_build1
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: docker/Dockerfile
+          push: true
+          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
+          no-cache: true
+          build-args: |
+            RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
+            RAPIDPRO_APPS_GIT_BRANCH=main
+            PROTOBUFFERS_URL=https://github.com/Ilhasoft/weni-protobuffers.git
       - name: Build and push - Varnish Image
         id: docker_build2
         uses: docker/build-push-action@v2
@@ -46,7 +46,7 @@ jobs:
           context: docker
           file: docker/Dockerfile.varnish
           push: true
-          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push:${{ steps.vars.outputs.tag }}-varnish
+          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}-varnish
           no-cache: true
           build-args: |
             BACKEND_ADDRESS=push-develop:8000
