--- a/.github/workflows/build-push-dnx.yaml
+++ b/.github/workflows/build-push-dnx.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Set output
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: echo "::set-output name=tag::$(git rev-parse --short HEAD)"
       - name: Login to ECR
         uses: docker/login-action@v1 
         with:
@@ -33,7 +33,7 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: 869898323958.dkr.ecr.us-east-1.amazonaws.com/push-backend:${GITHUB_SHA}
+          tags: 869898323958.dkr.ecr.us-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}
           no-cache: true
           build-args: |
             RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
@@ -46,7 +46,7 @@ jobs:
           context: docker
           file: docker/Dockerfile.varnish
           push: true
-          tags: 869898323958.dkr.ecr.us-east-1.amazonaws.com/push-backend:${GITHUB_SHA}-varnish
+          tags: 869898323958.dkr.ecr.us-east-1.amazonaws.com/push-backend:${{ steps.vars.outputs.tag }}-varnish
           no-cache: true
           build-args: |
             BACKEND_ADDRESS=push-develop:8000
