--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ iptools = "^0.7.0"
 iso-639 = "^0.4.5"
 iso8601 = "^0.1.14"
 phonenumbers = "*"
-pycountry = "18.12.8"
+pycountry = "^20.7.3"
 python-dateutil = "2.2"
 psycopg2-binary = "^2.9.1"
 python-intercom = "^3.1.0"
