Revert cryptography update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ elasticsearch-dsl = "^7.3.0"
 analytics-python = "^1.2.9"
 boto3 = "^1.17.21"
 librato_bg = "^1.0.6"
-cryptography = ">=3.3.2"
+cryptography = "3.4.7"
 vonage = "2.5.2"
 pyfcm = "^1.5.1"
 pyotp = "2.4.1"
