Hotfix/deploy actions (#235) (#236)
* Fix backend port in workflow

* Bump floweditor to 1.14.3

Co-authored-by: Cicero Woshington <cicero.woshington@weni.ai>

--- a/.github/workflows/build-staging-india-rapidpro.yaml
+++ b/.github/workflows/build-staging-india-rapidpro.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Set output
         id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/});
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3);
       - name: Check out the repo
         uses: actions/checkout@v2
         with: 
@@ -52,4 +52,4 @@ jobs:
           tags: 242357350604.dkr.ecr.ap-south-1.amazonaws.com/rapidpro:${{ steps.vars.outputs.tag }}-varnish
           no-cache: true
           build-args: |
-            BACKEND_ADDRESS=rapidpro-develop:8000
+            BACKEND_ADDRESS=rapidpro-staging:8000
