--- a/.github/workflows/build-staging-ireland-rapidpro.yaml
+++ b/.github/workflows/build-staging-ireland-rapidpro.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Set output
         id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/});
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3);
       - name: Check out the repo
         uses: actions/checkout@v2
         with: 
@@ -39,7 +39,7 @@ jobs:
             RAPIDPRO_APPS_GIT_URL=https://github.com/Ilhasoft/rapidpro-apps.git
             RAPIDPRO_APPS_GIT_BRANCH=main
             PROTOBUFFERS_URL=https://github.com/Ilhasoft/weni-protobuffers.git
-            FLOWEDITOR_VERSION=1.14.0
+            FLOWEDITOR_VERSION=1.14.3
             FLOWEDITOR_REPO=https://github.com/ilhasoft/floweditor.git
             FLOWEDITOR_BRANCH=main
       - name: Build and push - Varnish Image
@@ -52,4 +52,4 @@ jobs:
           tags: 452158872079.dkr.ecr.eu-west-1.amazonaws.com/rapidpro:${{ steps.vars.outputs.tag }}-varnish
           no-cache: true
           build-args: |
-            BACKEND_ADDRESS=rapidpro-develop:8000
+            BACKEND_ADDRESS=rapidpro-staging:8000
