Update dependencies including celery to 5.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ django-timezone-field = "^4.1.1"
 djangorestframework = "^3.12.2"
 dj-database-url = "^0.5.0"
 smartmin = "^3.0.1"
-celery = "4.4.6"
+celery = "^5.1.0"
 redis = "^3.5.3"
 elasticsearch = "^7.11.0"
 elasticsearch-dsl = "^7.3.0"
