--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ iso8601 = "^0.1.14"
 phonenumbers = "*"
 pycountry = "18.12.8"
 python-dateutil = "2.2"
-psycopg2-binary = "^2.8.6"
+psycopg2-binary = "2.8.6"
 simplejson = "^3.17.2"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
