fix: Downgrade psycopg2-binary version to 2.8.6 (#249)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ iso8601 = "^0.1.14"
 phonenumbers = "*"
 pycountry = "18.12.8"
 python-dateutil = "2.2"
-psycopg2-binary = "^2.8.6"
+psycopg2-binary = "==2.8.6"
 python-intercom = "^3.1.0"
 packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
