--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
       with:
         python-version: ${{ env.python-version }}
 
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-in-project: true
+
     - name: Install Redis
       uses: zhulik/redis-action@v1.0.0
       with:
@@ -57,7 +62,6 @@ jobs:
 
     - name: Initialize environment
       run: |
-        python -m pip install -U pip poetry
         poetry install
         npm install
         sudo npm install -g less
