--- a/.coveragerc
+++ b/.coveragerc
@@ -7,7 +7,7 @@ ignore_errors = True
 precision = 0
 show_missing = True
 skip_covered = True
-exclude_lines = 
+exclude_lines =
     pragma: no cover
     pragma: needs cover
     pragma: can't cover
@@ -36,6 +36,8 @@ omit =
     temba/utils/management/commands/test_db.py
     temba/utils/management/commands/perf_test.py
     temba/utils/management/commands/verify_sentry.py
+    temba/contacts/management/commands/import_contacts_in_bulk.py
+    temba/contacts/management/commands/update_contacts_in_bulk.py
 
 [html]
 directory = coverage_html_report
