--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ djangorestframework = "^3.12.2"
 dj-database-url = "^0.5.0"
 celery = "4.4.6"
 redis = "^3.5.3"
-elasticsearch = "^7.11.0"
-elasticsearch-dsl = "^7.3.0"
+elasticsearch = "7.11.0"
+elasticsearch-dsl = "7.3.0"
 analytics-python = "^1.2.9"
 boto3 = "^1.17.21"
 librato_bg = "^1.0.6"
