--- a/docker/Dockerfile.celery
+++ b/docker/Dockerfile.celery
@@ -1,4 +1,4 @@
-FROM greatnonprofits/ccl-base:v2.1
+FROM greatnonprofits/ccl-base:v3
 
 RUN wget https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem \
     -O /usr/local/share/ca-certificates/rds.crt
@@ -31,7 +31,7 @@ RUN rm -f /rapidpro/temba/settings.pyc
 COPY docker/entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
-RUN rm /usr/bin/python && ln -s /usr/bin/python3.6 /usr/bin/python
+RUN ln -s /usr/bin/python3.9 /usr/bin/python
 RUN rm -rf /tmp/* /var/tmp/*[~]$
 
 EXPOSE 8000
