--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ codecov = "^2.1.11"
 responses = "^0.12.1"
 beautifulsoup4 = "^4.9.3"
 
+[tool.black]
+line-length = 119
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
