--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ packaging = "^20.9"
 requests-toolbelt = "^0.9.1"
 chardet = "^4.0.0"
 openpyxl = "^3.0.9"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
