Test against latest redis 6.2, elastic 7.17.7 and postgres 12 + 13 + 14

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,15 @@ jobs:
     env:
       python-version: "3.9.x"
       postgis-version: "3.1"
-      redis-version: "5.0.6"
       node-version: "10"
-      elastic-version: "7.17.2"
-      rpindexer-version: "7.3.7"
-      mailroom-version: "7.3.18"
+      elastic-version: "7.17.7"
+      rpindexer-version: "7.5.0"
+      mailroom-version: "7.5.27"
       DJANGO_SETTINGS_MODULE: temba.settings_ci
     strategy:
       matrix:
-        pg-version: ["12", "13"]
+        redis-version: ["5.0.6", "6.2"]
+        pg-version: ["12", "13", "14"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
