--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,15 @@ beautifulsoup4 = "^4.9.3"
 [tool.black]
 line-length = 119
 
+[tool.isort]
+multi_line_output = 3
+force_grid_wrap = 0
+line_length = 119
+include_trailing_comma = true
+combine_as_imports = true
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
+known_django = ["django"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
